--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,15 +26,15 @@
           <div class="footer">
             <div class="contact">
               <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
+                Gustavo Vinícius<br />
+                Software Developer<br />
+                me@gustavovinicius.com
               </p>
             </div>
             <div class="contact">
               <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
+                <a href="https://github.com/gustavovnicius">github.com/gustavovnicius</a><br />
+                <a href="https://twitter.com/gustavovncius">twitter.com/gustavovncius</a><br />
               </p>
             </div>
           </div>
