--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,11 @@
     <div class="footer-col-1 column">
       <ul>
         <li>{{ site.title }}</li>
+      </ul>
+    </div>
+
+    <div class="footer-col-2 column">
+      <ul>
         <li>
           <a href="mailto:{{ site.email }}">{{ site.email }}
             <span class="icon email">
@@ -14,11 +19,6 @@
             </span>
           </a>
         </li>
-      </ul>
-    </div>
-
-    <div class="footer-col-2 column">
-      <ul>
         <li>
           <a href="https://github.com/{{ site.username }}">
             <span class="icon github">
@@ -30,7 +30,7 @@
         <li>
           <a href="https://twitter.com/{{ site.usernametwitter }}">
             <span class="icon twitter">
-              <img src="/img/github-icon-16.png"
+              <img src="/img/twitter-icon-16.png"
             </span>
             <span class="username">{{ site.usernametwitter }}</span>
           </a>
