--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,14 +15,14 @@
         <li>
           <a href="mailto:{{ site.email }}">{{ site.email }}
             <span class="icon email">
-              <img src="/img/email-icon-16.png"
+              <img src="/img/email-icon-16.png">
             </span>
           </a>
         </li>
         <li>
           <a href="https://github.com/{{ site.username }}">
             <span class="icon github">
-              <img src="/img/github-icon-16.png"
+              <img src="/img/github-icon-16.png">
             </span>
             <span class="username">{{ site.username }}</span>
           </a>
@@ -30,7 +30,7 @@
         <li>
           <a href="https://twitter.com/{{ site.usernametwitter }}">
             <span class="icon twitter">
-              <img src="/img/twitter-icon-16.png"
+              <img src="/img/twitter-icon-16.png">
             </span>
             <span class="username">{{ site.usernametwitter }}</span>
           </a>
