--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,6 +17,7 @@
             <span class="icon email">
               <img src="/img/email-icon-16.png">
             </span>
+            <span class="username">{{ site.email }}</span>
           </a>
         </li>
         <li>
