I must be blind...

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,11 +3,11 @@
   <div class="wrap">
 
     <h2 class="footer-heading">{{ site.title }}</h2>
-    
+
     <div class="footer-col-2 column">
       <ul>
         <li>
-          <a href="mailto:{{ site.email }}">{{ site.email }}
+          <a href="mailto:{{ site.email }}">
             <span class="icon email">
               <img src="/img/email-icon-16.png">
             </span>
