--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,36 +1,42 @@
 <footer class="site-footer">
-
   <div class="wrap">
+    <div class="row">
+      <div class="small-2 large-4 columns">
+        <h2 class="footer-heading">{{ site.title }}</h2>
+      </div>
+    </div>
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
+    <div class="row">
+      <div class="small-2 large-4 columns">
+        <a href="mailto:{{ site.email }}">
+          <span class="icon email">
+            <img src="/img/email-icon-16.png">
+          </span>
+          <span class="username">{{ site.email }}</span>
+        </a>
+      </div>
+    </div>
 
-    <div class="footer-col-2 column">
-      <ul>
-        <li>
-          <a href="mailto:{{ site.email }}">
-            <span class="icon email">
-              <img src="/img/email-icon-16.png">
-            </span>
-            <span class="username">{{ site.email }}</span>
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/{{ site.username }}">
-            <span class="icon github">
-              <img src="/img/github-icon-16.png">
-            </span>
-            <span class="username">{{ site.username }}</span>
-          </a>
-        </li>
-        <li>
-          <a href="https://twitter.com/{{ site.usernametwitter }}">
-            <span class="icon twitter">
-              <img src="/img/twitter-icon-16.png">
-            </span>
-            <span class="username">{{ site.usernametwitter }}</span>
-          </a>
-        </li>
-      </ul>
+    <div class="row">
+      <div class="small-2 large-4 columns">
+        <a href="https://twitter.com/{{ site.usernametwitter }}">
+          <span class="icon twitter">
+            <img src="/img/twitter-icon-16.png">
+          </span>
+          <span class="username">{{ site.usernametwitter }}</span>
+        </a>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="small-2 large-4 columns">
+        <a href="https://github.com/{{ site.username }}">
+          <span class="icon github">
+            <img src="/img/github-icon-16.png">
+          </span>
+          <span class="username">{{ site.username }}</span>
+        </a>
+      </div>
     </div>
 
     <div class="footer-col-3 column">
