--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,10 +39,13 @@
       </div>
     </div>
 
-    <div class="footer-col-3 column">
-      <p class="text">{{ site.description }}</p>
+    <div class="row">
+      <div class="small-2 large-4 columns">
+        <div class="footer-col-3 column">
+          <p class="text">{{ site.description }}</p>
+        </div>
+      </div>
     </div>
 
   </div>
-
 </footer>
