Desgrudando as linhas

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row display">
       <div class="small-2 large-4 columns">
         <a href="mailto:{{ site.email }}">
           <span class="icon email">
@@ -17,7 +17,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row display">
       <div class="small-2 large-4 columns">
         <a href="https://twitter.com/{{ site.usernametwitter }}">
           <span class="icon twitter">
@@ -28,7 +28,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row display">
       <div class="small-2 large-4 columns">
         <a href="https://github.com/{{ site.username }}">
           <span class="icon github">
@@ -39,7 +39,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row display">
       <div class="small-12 large-12 columns">
         <p class="text">{{ site.description }}</p>
       </div>
