--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,5 +10,6 @@
     <link rel="stylesheet" href="{{ "/css/normalize.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/css/foundation.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/custom.css" | prepend: site.baseurl }}">
 
 </head>
